# Ref4D-VideoBench

./: README.md  pyproject.toml
checkpoints/: README_checkpoints.md
data/: README_data.md
data/metadata/: ref4d_meta.jsonl  ref4d_prompts.jsonl  ref4d_videobench_reference_sources.csv
data/metadata/motion_ref/: ref4d_0001.npz  ref4d_0002.npz  ref4d_0003.npz  ref4d_0004.npz  (+596 more)
docs/: CUSTOM_REFERENCE.md  DATA_SCHEMA.md  QUICKSTART.md
envs/: ref4d_event.yml  ref4d_motion.yml  ref4d_semantic_world.yml
ref4d_build/common/: merge_semantic_event_evidence.py
ref4d_build/event_ref/: build_event_ref_cache.py
ref4d_build/motion_ref/: build_motion_ref_cache.py
ref4d_build/prompt/: README.md  batch_video_prompt_generator.py  requirement.txt  video_prompt_generator_scenedetect.py
ref4d_build/ref_collect/: README.md  download_videos.py  requirement.txt  video_shot_detector.py  video_shot_detector_gpu.py  youtube_cc_manifest.py
ref4d_build/semantic_ref/: build_semantic_ref.py
ref4d_build/world_ref/: AS_0.py  VQA_0.py  build_world_qa.py  question_bank.py  rule_examples.py  rule_many.py
ref4d_eval/motion/: cli_motion.py  run_batch_motion.py
ref4d_eval/semantic/: runner.py  semantics_evi_score_dist.py
ref4d_eval/world/: runner.py
scripts/: _logging.sh  build_prompts_from_refvideo.sh  download_event_models.sh  download_motion_models.sh  download_semantic_world_models.sh  export_event_pair_audit.py  install_env.sh  run_4d_eval.sh  run_all.sh  run_event_eval.sh  run_event_eval_multigpu_by_sample.sh  run_motion_eval.sh  run_semantic_eval.sh  run_world_eval.sh
(+2442 files in other folders)
