[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ref4d-videobench"
version = "0.1.0"
description = "Ref4D video benchmark evaluation and reference-side construction tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24,<2",
  "scipy>=1.10",
  "pandas>=1.5",
  "pyyaml>=6",
  "tqdm>=4.64",
  "opencv-python-headless>=4.8,<5",
  "torch>=2.0",
  "torchvision>=0.15",
  "transformers>=4.46",
  "sentencepiece>=0.2",
  "accelerate>=1.0",
  "decord==0.6.0",
  "scenedetect>=0.6.7",
  "huggingface-hub>=0.24",
  "google-api-python-client>=2",
  "yt-dlp",
  "timm",
  "ffmpeg-python",
  "safetensors",
  "einops",
  "imageio-ffmpeg",
  "pillow",
]

[tool.setuptools.packages.find]
include = ["ref4d_eval*", "ref4d_build*"]
